--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(mainback.jpg) center repeat;
+}
+
+header {
+  position: fixed;
+  top:0;
+  width: 100%;
+  height: 80px;
+  background-color: rgba(0,0,0, .5);
+  padding-top: 20px;
 }
 
 code {
